--- a/resources/css/page.css
+++ b/resources/css/page.css
@@ -1,14 +1,14 @@
 .navbar {
-    background: #000 !important;
+    background: #255 !important;
 }
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-    background-color: #6C6C6C !important;
+    background-color: #17807a !important;
 	font-weight: bold;
 }
 
 .bs-sidenav a {
-	color: #000;
+	color: rgb(81, 39, 177);
 }
 
 .col-md-9 img {
@@ -19,9 +19,9 @@
 }
 
 .dropdown-item:hover, .dropdown-item:focus {
-    background-color: #00000090;
+    background-color:#0b30d690;
 }
 
 .dropdown-item.active, .dropdown-item:active {
-    background-color: #00000060;
+    background-color: #5c09f760;
 }
